Agregue iconos png, galeria de imagenes y la fuente en una etiqueta

--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArtDecoraciones</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/header.css">
 </head>
 <body>
@@ -23,13 +23,13 @@
     </header>
 
     <main></main>
-
+    
     <footer>
-        <div>
-            <p>Seguinos en nuestras redes!</p>
-            <ul>
-                <li><a href="https://www.instagram.com/artdecoraciones5/"><img src="https://cdn-icons-png.flaticon.com/512/87/87390.png" alt="Logo de instragram"></a></li>
-                <li><a href="https://www.facebook.com/search/top?q=art-decoraciones"><img src="https://img.freepik.com/iconos-gratis/facebook-logo-esquinas-redondeadas_318-9850.jpg?size=338&ext=jpg" alt="Logo de facebook"></a></li>
+        <div class="contenedor-footer">
+            <p class="contenedor-footer__seguinos">¿Queres mas? ¡Seguinos en nuestras redes!</p>
+            <ul class="contenedor-footer__redesSociales">
+                <li><a href="https://www.instagram.com/artdecoraciones5/"><img src="../instagram.png" alt="Logo de instragram"></a></li>
+                <li><a href="https://www.facebook.com/search/top?q=art-decoraciones"><img src="../facebook.png" alt="Logo de facebook"></a></li>>
             </ul>
         </div>
     </footer>
