Responsivo todo menos el formulario

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <header>
         <a href="../index.html" class="Contenedor-logo"><img class="Logo" src="https://i.ibb.co/N1wRwDn/lgo.png" alt=""></a>
-        <nav>
-            <ul>
+        <nav class="navegador">
+            <ul class="contendero-elementosnav">
                 <li class="Articulos"><a href="./pages/articulos.html">Articulos</a></li>
                 <li class="Contacto"><a href="./pages/contacto.html">Contacto</a></li>
                 <li class="Sobre_nosotros"><a href="./pages/sobre_nosotros.html">Sobre nosotros</a></li>
