Responsive terminado, ahora toca hacer los elementos

--- a/pages/articulos.html
+++ b/pages/articulos.html
@@ -13,11 +13,11 @@
 <body>
     <header>
         <a href="../index.html" class="Contenedor-logo"><img class="Logo" src="https://i.ibb.co/N1wRwDn/lgo.png" alt=""></a>
-        <nav>
-            <ul>
-                <li class="Articulos"><a href="./articulos.html">Articulos</a></li>
-                <li class="Contacto"><a href="./contacto.html">Contacto</a></li>
-                <li class="Sobre_nosotros"><a href="./sobre_nosotros.html">Sobre nosotros</a></li>
+        <nav class="navegador">
+            <ul class="contendero-elementosnav">
+                <li class="Articulos"><a href="../pages/articulos.html">Articulos</a></li>
+                <li class="Contacto"><a href="../pages/contacto.html">Contacto</a></li>
+                <li class="Sobre_nosotros"><a href="../pages/sobre_nosotros.html">Sobre nosotros</a></li>
             </ul>
         </nav>
     </header>
