Responsive articulos! ahora solo me queda hacer con grid el sobre nosotros

--- a/pages/articulos.html
+++ b/pages/articulos.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/articulos.css">
 </head>
 <body>
     <header>
@@ -22,7 +23,48 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+        <div class="item">
+            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+              <div class="texto">Kit Escolar </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+              <div class="texto">Kit Escolar </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+              <div class="texto">Kit Escolar </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+              <div class="texto">Kit Escolar </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+              <div class="texto">Kit Escolar </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+              <div class="texto">Kit Escolar </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+              <div class="texto">Kit Escolar </div>
+            </div>
+        </div>
+        <div class="item">
+            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+              <div class="texto">Kit Escolar </div>
+            </div>
+        </div>
+    </main>
 
     <footer>
         <div class="contenedor-footer">
