Gran parte de la pagina terminada

--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/sobreNosotros.css">
 </head>
 <body>
     <header>
@@ -22,7 +23,24 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+            <h2 class="sobreNosotros-Titulo">Sobre nosotros:</h2>
+            <div class="sobreNosotros-Texto">
+                <p class="sobreNosotros-parrafo1">
+                    ¡Bienvenidos! <br> <br> Me llamo Trini y me gustaria contarles un poco mas sobre art-decoraciones. <br> <br>  Todo esto comenzo como un hobby, ya que amo embellecer momentos. Comencé un curso de decoración de eventos y, desde ese momento, no paré de hacer de cada momentos algo increíbles, siempre con ayuda del papel.
+                </p>
+                <p class="sobreNosotros-parrafo2">
+                    Me especialice en artículos para decoración de festejos y papelería para emprendimientos, ya que, con un poco de ayuda, podemos hacer que los momentos se vuelvan eternos en nuestras memorias...  ¿Quién no recuerda ese cumple donde hay cosas bonitas que resaltan ese día?
+                </p>
+                <p class="sobreNosotros-parrafo3">
+                    ¡Nuestro amor es de adentro hacia afuera! La decoración es eso, sacar lo bonito que tenemos adentro y explotarlo a nuestro alrededor con objetos que resaltan esos colores, esa creatividad. 
+                </p>
+                <p class="sobreNosotros-parrafo4">
+                    Así que anímate escríbenos y te ayudamos a que tu momento sean inolvidable.
+                </p>
+                <p class="firma">Trinidad Miglioranza</p>
+            </div>
+    </main>
     
     <footer>
         <div class="contenedor-footer">
