Terminado el menuu

--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/header.css">
+    <script src="https://kit.fontawesome.com/6db54a042a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <a href="../index.html" class="Contenedor-logo"><img class="Logo" src="https://i.ibb.co/N1wRwDn/lgo.png" alt=""></a>
-        <nav class="navegador">
+        <nav class="nav">
+            <div class="solapa"></div>
+            <label for="check" class="bar-btn">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+            <input type="checkbox" id="check" class="input__nav">
             <ul class="contendero-elementosnav">
-                <li class="Articulos"><a href="./pages/articulos.html">Articulos</a></li>
-                <li class="Contacto"><a href="./pages/contacto.html">Contacto</a></li>
-                <li class="Sobre_nosotros"><a href="./pages/sobre_nosotros.html">Sobre nosotros</a></li>
+                <li class="solapita"></li>
+                <li class="nav__item"><a href="./pages/articulos.html">Articulos</a></li>
+                <li class="nav__item"><a href="./pages/contacto.html">Contacto</a></li>
+                <li class="nav__item"><a href="./pages/sobre_nosotros.html">Sobre nosotros</a></li>
             </ul>
         </nav>
     </header>
