Termine todo lo que tenia pensado por el momento

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/header.css">
     <script src="https://kit.fontawesome.com/6db54a042a.js" crossorigin="anonymous"></script>
+    <link href="//db.onlinewebfonts.com/c/1fed4454352f201d52b65ca5480afb2d?family=Playlist" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <header>
@@ -32,7 +33,13 @@
 
     <main>
         <!-- Futuro carousel, lo voy a dejar como una "Galeria de ofertas destacadas" por asi decirlo -->
+        
         <div class="carousel">
+            <div class="tituloDeLaPagina">
+                <h2>TODO PERSONALIZADO</h2>
+                <h1>ArtDecoraciones</h1>
+            </div>
+            
             <article class="articulo-principal">
                 <div class="articulo-destacado"><a href=""><img src="./275958006_640349083711170_3136099289642900423_n.jpeg" alt=""></a></div>
             </article>
