--- a/index.html
+++ b/index.html
@@ -37,13 +37,46 @@
     <main>
         <!-- Futuro carousel, lo voy a dejar como una "Galeria de ofertas destacadas" por asi decirlo -->
         
-        <div class="carousel">
+        <div class="carousel-contenedor">
             <div class="tituloDeLaPagina">
                 <h2>TODO PERSONALIZADO</h2>
                 <h1>ArtDecoraciones</h1>
             </div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img class="d-block w-100" src="./275958006_640349083711170_3136099289642900423_n.jpeg" alt="First slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="./275958006_640349083711170_3136099289642900423_n.jpeg" alt="Second slide">
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="./275958006_640349083711170_3136099289642900423_n.jpeg" alt="Third slide">
+                              </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Next</span>
+                            </a>
+                          </div>
+                    </div>
+                </div>
+            </div>
             
-            <article class="articulo-principal">
+            <!-- <article class="articulo-principal">
                 <div class="articulo-destacado"><a href=""><img src="./275958006_640349083711170_3136099289642900423_n.jpeg" alt=""></a></div>
             </article>
             <article class="articulo-principal">
@@ -51,7 +84,7 @@
             </article>
             <article class="articulo-principal">
                 <div class="articulo-destacado"><a href=""><img src="./275958006_640349083711170_3136099289642900423_n.jpeg" alt=""></a></div>
-            </article>
+            </article> -->
         </div>
     </main>
 
