--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- La verdad que paso de aplicar boostrap en el nav despues de lo que me costo hacerlo jaja -->
     <header>
-        <a href="../index.html" class="Contenedor-logo"><img class="Logo" src="https://i.ibb.co/N1wRwDn/lgo.png" alt=""></a>
+        <a href="./index.html" class="Contenedor-logo"><img class="Logo" src="https://i.ibb.co/N1wRwDn/lgo.png" alt=""></a>
         <nav class="nav">
             <div class="solapa"></div>
             <label for="check" class="bar-btn">
