--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,38 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ArtDecoraciones</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/header.css">
-    <link rel="stylesheet" href="../styles/contacto.css">
-    <script src="https://kit.fontawesome.com/6db54a042a.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../styles/header.css" />
+    <link rel="stylesheet" href="../styles/contacto.css" />
+    <script
+      src="https://kit.fontawesome.com/6db54a042a.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <header>
-        <a href="../index.html" class="Contenedor-logo"><img class="Logo" src="https://i.ibb.co/N1wRwDn/lgo.png" alt=""></a>
-        <nav class="nav">
-            <div class="solapa"></div>
-            <label for="check" class="bar-btn">
-                <i class="fa-solid fa-bars"></i>
-            </label>
-            <input type="checkbox" id="check" class="input__nav">
-            <ul class="contendero-elementosnav">
-                <li class="solapita"></li>
-                <li class="nav__item"><a href="../pages/articulos.html">Articulos</a></li>
-                <li class="nav__item"><a href="../pages/contacto.html">Contacto</a></li>
-                <li class="nav__item"><a href="../pages/sobre_nosotros.html">Sobre nosotros</a></li>
-            </ul>
-        </nav>
+      <a href="../index.html" class="Contenedor-logo"
+        ><img class="Logo" src="https://i.ibb.co/N1wRwDn/lgo.png" alt=""
+      /></a>
+      <nav class="nav">
+        <div class="solapa"></div>
+        <label for="check" class="bar-btn">
+          <i class="fa-solid fa-bars"></i>
+        </label>
+        <input type="checkbox" id="check" class="input__nav" />
+        <ul class="contendero-elementosnav">
+          <li class="solapita"></li>
+          <li class="nav__item">
+            <a href="../pages/articulos.html">Articulos</a>
+          </li>
+          <li class="nav__item">
+            <a href="../pages/contacto.html">Contacto</a>
+          </li>
+          <li class="nav__item">
+            <a href="../pages/sobre_nosotros.html">Sobre nosotros</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <div class="contenedor-formulario">
-            <form action="#">
+      <div class="contenedor-formulario">
+        <!-- <form action="#">
                 <div>
                     <label for="nombre">Tu nombre</label>
                     <input id="nombre" name="nombre" type="text" placeholder="Romina">
@@ -45,17 +65,68 @@
                     <label for="message">¡Tu mensaje!</label>
                     <textarea name="message" id="message" cols="30" rows="10"></textarea>
                 </div>
-            </form>
+            </form> -->
+        <!-- Name input -->
+      <form action="">
+        <div class="form-outline mb-4">
+            <input type="text" id="form4Example1" class="form-control" />
+            <label class="form-label" for="form4Example1">Nombre</label>
+          </div>
+  
+          <!-- Email input -->
+          <div class="form-outline mb-4">
+            <input type="email" id="form4Example2" class="form-control" />
+            <label class="form-label" for="form4Example2">Direccion de email</label>
+          </div>
+  
+          <!-- Message input -->
+          <div class="form-outline mb-4">
+            <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+            <label class="form-label" for="form4Example3">Mensaje</label>
+          </div>
+  
+          <!-- Submit button -->
+          <button id="boton" type="submit" class="btn btn-primary btn-block mb-4">
+            Send
+          </button>
         </div>
+      </form>
     </main>
+
     <footer>
-        <div class="contenedor-footer">
-            <p class="contenedor-footer__seguinos">¿Queres mas? ¡Seguinos en nuestras redes!</p>
-            <ul class="contenedor-footer__redesSociales">
-                <li><a href="https://www.instagram.com/artdecoraciones5/"><img src="../instagram.png" alt="Logo de instragram"></a></li>
-                <li><a href="https://www.facebook.com/search/top?q=art-decoraciones"><img src="../facebook.png" alt="Logo de facebook"></a></li>>
-            </ul>
-        </div>
+      <div class="contenedor-footer">
+        <p class="contenedor-footer__seguinos">
+          ¿Queres mas? ¡Seguinos en nuestras redes!
+        </p>
+        <ul class="contenedor-footer__redesSociales">
+          <li>
+            <a href="https://www.instagram.com/artdecoraciones5/"
+              ><img src="../instagram.png" alt="Logo de instragram"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/search/top?q=art-decoraciones"
+              ><img src="../facebook.png" alt="Logo de facebook"
+            /></a>
+          </li>
+          >
+        </ul>
+      </div>
     </footer>
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
