--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,30 +24,23 @@
       crossorigin="anonymous"
     ></script>
   </head>
+
   <body>
-    <header>
-      <a href="../index.html" class="Contenedor-logo"
-        ><img class="Logo" src="https://i.ibb.co/N1wRwDn/lgo.png" alt=""
-      /></a>
-      <nav class="nav">
-        <div class="solapa"></div>
-        <label for="check" class="bar-btn">
-          <i class="fa-solid fa-bars"></i>
-        </label>
-        <input type="checkbox" id="check" class="input__nav" />
-        <ul class="contendero-elementosnav">
-          <li class="solapita"></li>
-          <li class="nav__item">
-            <a href="../pages/articulos.html">Articulos</a>
-          </li>
-          <li class="nav__item">
-            <a href="../pages/contacto.html">Contacto</a>
-          </li>
-          <li class="nav__item">
-            <a href="../pages/sobre_nosotros.html">Sobre nosotros</a>
-          </li>
-        </ul>
-      </nav>
+   <header>
+        <a href="../index.html" class="Contenedor-logo"><img class="Logo" src="https://i.ibb.co/N1wRwDn/lgo.png" alt=""></a>
+        <nav class="nav">
+            <div class="solapa"></div>
+            <label for="check" class="bar-btn">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+            <input type="checkbox" id="check" class="input__nav">
+            <ul class="contendero-elementosnav">
+                <li class="solapita"></li>
+                <li class="nav__item"><a href="../pages/articulos.html">Articulos</a></li>
+                <li class="nav__item"><a href="../pages/contacto.html">Contacto</a></li>
+                <li class="nav__item"><a href="../pages/sobre_nosotros.html">Sobre nosotros</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
