--- a/pages/articulos.html
+++ b/pages/articulos.html
@@ -32,42 +32,42 @@
 
     <main>
         <div class="item">
-            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
