--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                             </ol>
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img class="d-block w-100" src="./275958006_640349083711170_3136099289642900423_n.jpeg" alt="First slide">
+                                <img class="d-block w-100" src="./estaticos/destacado/275958006_640349083711170_3136099289642900423_n.jpeg" alt="First slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="./275958006_640349083711170_3136099289642900423_n.jpeg" alt="Second slide">
+                                <img class="d-block w-100" src="./estaticos/destacado/275958006_640349083711170_3136099289642900423_n.jpeg" alt="Second slide">
                               </div>
                               <div class="carousel-item">
-                                <img class="d-block w-100" src="./275958006_640349083711170_3136099289642900423_n.jpeg" alt="Third slide">
+                                <img class="d-block w-100" src="./estaticos/destacado/275958006_640349083711170_3136099289642900423_n.jpeg" alt="Third slide">
                               </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -81,8 +81,8 @@
         <div class="contenedor-footer">
             <p class="contenedor-footer__seguinos">¿Queres mas? ¡Seguinos en nuestras redes!</p>
             <ul class="contenedor-footer__redesSociales">
-                <li><a href="https://www.instagram.com/artdecoraciones5/"><img src="./instagram.png" alt="Logo de instragram"></a></li>
-                <li><a href="https://www.facebook.com/search/top?q=art-decoraciones"><img src="./facebook.png" alt="Logo de facebook"></a></li>>
+                <li><a href="https://www.instagram.com/artdecoraciones5/"><img src="./estaticos/logos/instagram.png" alt="Logo de instragram"></a></li>
+                <li><a href="https://www.facebook.com/search/top?q=art-decoraciones"><img src="./estaticos/logos/facebook.png" alt="Logo de facebook"></a></li>>
             </ul>
         </div>
     </footer>
