--- a/pages/combos.html
+++ b/pages/combos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap"
@@ -25,9 +25,10 @@
             <input type="checkbox" id="check" class="input__nav">
             <ul class="contendero-elementosnav">
                 <li class="solapita"></li>
-                <li class="nav__item"><a href="../pages/articulos.html">Articulos</a></li>
-                <li class="nav__item"><a href="../pages/contacto.html">Contacto</a></li>
-                <li class="nav__item"><a href="../pages/sobre_nosotros.html">Sobre nosotros</a></li>
+                <li class="nav__item"><a href="./articulos.html">Articulos</a></li>
+                <li class="nav__item"><a href="./combos.html">Combos</a></li>
+                <li class="nav__item"><a href="./contacto.html">Contacto</a></li>
+                <li class="nav__item"><a href="./sobre_nosotros.html">Sobre nosotros</a></li>
             </ul>
         </nav>
     </header>
