--- a/index.html
+++ b/index.html
@@ -10,32 +10,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./css/test.css">
     <script src="https://kit.fontawesome.com/6db54a042a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <!-- La verdad que paso de aplicar boostrap en el nav despues de lo que me costo hacerlo jaja -->
     <header>
-        <a href="./index.html" class="Contenedor-logo"><img class="Logo" src="https://i.ibb.co/N1wRwDn/lgo.png" alt=""></a>
-        <nav class="nav">
-            <div class="solapa"></div>
-            <label for="check" class="bar-btn">
-                <i class="fa-solid fa-bars"></i>
-            </label>
-            <input type="checkbox" id="check" class="input__nav">
-            <ul class="contendero-elementosnav">
-                <li class="solapita"></li>
-                <li class="nav__item"><a href="./pages/articulos.html">Articulos</a></li>
-                <li class="nav__item"><a href="./pages/contacto.html">Contacto</a></li>
-                <li class="nav__item"><a href="./pages/sobre_nosotros.html">Sobre nosotros</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <!-- Futuro carousel, lo voy a dejar como una "Galeria de ofertas destacadas" por asi decirlo -->
-        
+      <a href="../index.html" class="Contenedor-logo"><img class="Logo" src="https://i.ibb.co/N1wRwDn/lgo.png" alt=""></a>
+      <nav class="nav">
+          <div class="solapa"></div>
+          <label for="check" class="bar-btn">
+              <i class="fa-solid fa-bars"></i>
+          </label>
+          <input type="checkbox" id="check" class="input__nav">
+          <ul class="contendero-elementosnav">
+              <li class="solapita"></li>
+              <li class="nav__item"><a href="./pages/articulos.html">Articulos</a></li>
+              <li class="nav__item"><a href="./pages/combos.html">Combos</a></li>
+              <li class="nav__item"><a href="./pages/contacto.html">Contacto</a></li>
+              <li class="nav__item"><a href="./pages/sobre_nosotros.html">Sobre nosotros</a></li>
+          </ul>
+      </nav>
+  </header>
+    <main>      
         <div class="carousel-contenedor">
             <div class="tituloDeLaPagina">
                 <h2>TODO PERSONALIZADO</h2>
