--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArtDecoraciones</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../css/test.css">
     <link rel="stylesheet" href="../styles/sobreNosotros.css">
     <script src="https://kit.fontawesome.com/6db54a042a.js" crossorigin="anonymous"></script>
 </head>
@@ -23,9 +24,10 @@
             <input type="checkbox" id="check" class="input__nav">
             <ul class="contendero-elementosnav">
                 <li class="solapita"></li>
-                <li class="nav__item"><a href="../pages/articulos.html">Articulos</a></li>
-                <li class="nav__item"><a href="../pages/contacto.html">Contacto</a></li>
-                <li class="nav__item"><a href="../pages/sobre_nosotros.html">Sobre nosotros</a></li>
+                <li class="nav__item"><a href="./articulos.html">Articulos</a></li>
+                <li class="nav__item"><a href="./combos.html">Combos</a></li>
+                <li class="nav__item"><a href="./contacto.html">Contacto</a></li>
+                <li class="nav__item"><a href="./sobre_nosotros.html">Sobre nosotros</a></li>
             </ul>
         </nav>
     </header>
@@ -58,5 +60,9 @@
             </ul>
         </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
