--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -55,8 +55,8 @@
         <div class="contenedor-footer">
             <p class="contenedor-footer__seguinos">¿Queres mas? ¡Seguinos en nuestras redes!</p>
             <ul class="contenedor-footer__redesSociales">
-                <li><a href="https://www.instagram.com/artdecoraciones5/"><img src="./estaticos/logos/instagram.png" alt="Logo de instragram"></a></li>
-                <li><a href="https://www.facebook.com/search/top?q=art-decoraciones"><img src="./estaticos/logos/facebook.png" alt="Logo de facebook"></a></li>>
+                <li><a href="https://www.instagram.com/artdecoraciones5/"><img src="../estaticos/logos/instagram.png" alt="Logo de instragram"></a></li>
+                <li><a href="https://www.facebook.com/search/top?q=art-decoraciones"><img src="../estaticos/logos/facebook.png" alt="Logo de facebook"></a></li>>
             </ul>
         </div>
     </footer>
