--- a/pages/articulos.html
+++ b/pages/articulos.html
@@ -35,42 +35,42 @@
 
     <main>
         <div class="item">
-            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../estaticos/articulos/kitEscolar.jpeg">
+            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
             </div>
         </div>
@@ -80,8 +80,8 @@
         <div class="contenedor-footer">
             <p class="contenedor-footer__seguinos">¿Queres mas? ¡Seguinos en nuestras redes!</p>
             <ul class="contenedor-footer__redesSociales">
-                <li><a href="https://www.instagram.com/artdecoraciones5/"><img src="../estaticos/logos/instagram.png" alt="Logo de instragram"></a></li>
-                <li><a href="https://www.facebook.com/search/top?q=art-decoraciones"><img src="../estaticos/logos/facebook.png" alt="Logo de facebook"></a></li>>
+                <li><a href="https://www.instagram.com/artdecoraciones5/"><img src="../static/logos/instagram.png" alt="Logo de instragram"></a></li>
+                <li><a href="https://www.facebook.com/search/top?q=art-decoraciones"><img src="../static/logos/facebook.png" alt="Logo de facebook"></a></li>>
             </ul>
         </div>
     </footer>
