--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -86,15 +86,17 @@
         </div>
       </form>
     </main>
+
     <footer>
       <div class="contenedor-footer">
           <p class="contenedor-footer__seguinos">¿Queres mas? ¡Seguinos en nuestras redes!</p>
           <ul class="contenedor-footer__redesSociales">
-              <li><a href="https://www.instagram.com/artdecoraciones5/"><img src="../estaticos/logos/instagram.png" alt="Logo de instragram"></a></li>
-              <li><a href="https://www.facebook.com/search/top?q=art-decoraciones"><img src="../estaticos/logos/facebook.png" alt="Logo de facebook"></a></li>>
+              <li><a href="https://www.instagram.com/artdecoraciones5/"><img src="../static/logos/instagram.png" alt="Logo de instragram"></a></li>
+              <li><a href="https://www.facebook.com/search/top?q=art-decoraciones"><img src="../static/logos/facebook.png" alt="Logo de facebook"></a></li>>
           </ul>
       </div>
-  </footer>
+    </footer>
+
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
