--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -55,12 +55,12 @@
         <div class="contenedor-footer">
             <p class="contenedor-footer__seguinos">¿Queres mas? ¡Seguinos en nuestras redes!</p>
             <ul class="contenedor-footer__redesSociales">
-                <li><a href="https://www.instagram.com/artdecoraciones5/"><img src="../estaticos/logos/instagram.png" alt="Logo de instragram"></a></li>
-                <li><a href="https://www.facebook.com/search/top?q=art-decoraciones"><img src="../estaticos/logos/facebook.png" alt="Logo de facebook"></a></li>>
+                <li><a href="https://www.instagram.com/artdecoraciones5/"><img src="../static/logos/instagram.png" alt="Logo de instragram"></a></li>
+                <li><a href="https://www.facebook.com/search/top?q=art-decoraciones"><img src="../static/logos/facebook.png" alt="Logo de facebook"></a></li>>
             </ul>
         </div>
     </footer>
-
+    
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
