articulo terminado con sass

--- a/pages/articulos.html
+++ b/pages/articulos.html
@@ -9,9 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="../styles/articulos.css">
-    <link rel="stylesheet" href="../css/test.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/6db54a042a.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -33,7 +31,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main-art">
         <div class="item">
             <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
               <div class="texto">Kit Escolar </div>
