--- a/pages/combos.html
+++ b/pages/combos.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/6db54a042a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/test.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
