--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/test.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../styles/contacto.css" />
     <script
       src="https://kit.fontawesome.com/6db54a042a.js"
