--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,11 +18,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../styles/contacto.css" />
-    <script
-      src="https://kit.fontawesome.com/6db54a042a.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/6db54a042a.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -44,39 +40,24 @@
       </nav>
   </header>
 
-    <main>
+    <main class="main-contacto">
       <div class="contenedor-formulario">
-        <!-- <form action="#">
-                <div>
-                    <label for="nombre">Tu nombre</label>
-                    <input id="nombre" name="nombre" type="text" placeholder="Romina">
-                </div>
-                <div>
-                    <label for="email">Tu email</label>
-                    <input id="email" name="email" type="text" placeholder="ejemplo@mail.com">
-                </div>
-                <div>
-                    <label for="message">¡Tu mensaje!</label>
-                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
-                </div>
-            </form> -->
-        <!-- Name input -->
       <form action="">
         <div class="form-outline mb-4">
-            <input type="text" id="form4Example1" class="form-control" />
             <label class="form-label" for="form4Example1">Nombre</label>
+            <input type="text" id="form4Example1" class="form-control"/>
           </div>
   
           <!-- Email input -->
           <div class="form-outline mb-4">
-            <input type="email" id="form4Example2" class="form-control" />
             <label class="form-label" for="form4Example2">Direccion de email</label>
+            <input type="email" id="form4Example2" class="form-control" />
           </div>
   
           <!-- Message input -->
           <div class="form-outline mb-4">
-            <textarea class="form-control" id="form4Example3" rows="4"></textarea>
             <label class="form-label" for="form4Example3">Mensaje</label>
+            <textarea class="form-control" id="form4Example3" rows="4"></textarea>
           </div>
   
           <!-- Submit button -->
