--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../styles/sobreNosotros.css">
     <script src="https://kit.fontawesome.com/6db54a042a.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -32,8 +31,7 @@
         </nav>
     </header>
 
-    <main>
-            <h2 class="sobreNosotros-Titulo">Sobre nosotros:</h2>
+    <main class="main-sobreNosotros">
             <div class="sobreNosotros-Texto">
                 <p class="sobreNosotros-parrafo1">
                     ¡Bienvenidos! <br> <br> Me llamo Trini y me gustaria contarles un poco mas sobre art-decoraciones. <br> <br>  Todo esto comenzo como un hobby, ya que amo embellecer momentos. Comencé un curso de decoración de eventos y, desde ese momento, no paré de hacer de cada momentos algo increíbles, siempre con ayuda del papel.
