--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ArtDecoraciones</title>
+    <title> ArtDecoraciones - Home </title>
+    <meta name="keywords" content="art, decoracion, papeleria, personalizado">
+    <meta name="description" content="ArtDecoraciones es una empresa dedicada a la venta de artículos de papelería personalizada, con una amplia gama de productos para todo tipo de eventos, como bodas, fiestas, conciertos, etc.">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
