--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ArtDecoraciones</title>
+    <title> ArtDecoraciones - Contacto </title>
+    <meta name="keywords" content="art, decoracion, papeleria, personalizado">
+    <meta name="description" content="ArtDecoraciones es una empresa dedicada a la venta de artículos de papelería personalizada, con una amplia gama de productos para todo tipo de eventos, como bodas, fiestas, conciertos, etc.">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
