Listo para la tercer entrega

--- a/pages/articulos.html
+++ b/pages/articulos.html
@@ -35,43 +35,33 @@
 
     <main class="main-art">
         <div class="item">
-            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
-              <div class="texto">Kit Escolar </div>
+            <div class="polaroid"><img src="../static/articulos/kitescolar.jpeg">
+              <div class="texto"> Kit Escolar </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
-              <div class="texto">Kit Escolar </div>
+            <div class="polaroid"><img src="../static/articulos/kitescolardigital.jpeg">
+              <div class="texto"> Kit Escolar - digital </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
-              <div class="texto">Kit Escolar </div>
+            <div class="polaroid"><img src="../static/articulos/kitcalendarios.jpeg">
+              <div class="texto"> Calendarios </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
-              <div class="texto">Kit Escolar </div>
+            <div class="polaroid"><img src="../static/articulos/organizadorescaratulas.jpeg">
+              <div class="texto"> Caratulas + Organizadores </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
-              <div class="texto">Kit Escolar </div>
+            <div class="polaroid"><img src="../static/articulos/etiquetas.jpg">
+              <div class="texto"> Etiquetas </div>
             </div>
         </div>
         <div class="item">
-            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
-              <div class="texto">Kit Escolar </div>
-            </div>
-        </div>
-        <div class="item">
-            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
-              <div class="texto">Kit Escolar </div>
-            </div>
-        </div>
-        <div class="item">
-            <div class="polaroid"><img src="../static/articulos/kitEscolar.jpeg">
-              <div class="texto">Kit Escolar </div>
+            <div class="polaroid"><img src="../static/articulos/fibrofacil.jpg">
+              <div class="texto"> Cajita decorativa </div>
             </div>
         </div>
     </main>
