--- a/pages/combos.html
+++ b/pages/combos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <titl> ArtDecoraciones - Combos </titl>
+    <title> ArtDecoraciones - Combos </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -30,6 +30,48 @@
             </ul>
         </nav>
     </header>
+
+    <main class="main-combos">
+        <h2>Kits completos</h2>
+        <article class="combo-art">
+            <h2>Kit estudiante</h2>
+            <div class="item">
+                <div class="polaroid"><img src="../static/articulos/kitescolar.jpeg">
+                  <div class="texto"> Kit Escolar </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="polaroid"><img src="../static/articulos/organizadorescaratulas.jpeg">
+                  <div class="texto"> Caratulas + Organizadores </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="polaroid"><img src="../static/articulos/kitescolardigital.jpeg">
+                  <div class="texto"> Kit Escolar - digital </div>
+                </div>
+            </div>
+        </article>
+        <article class="combo-art">
+            <h2>Kit emprendedor</h2>
+            <div class="item">
+                <div class="polaroid"><img src="../static/articulos/kitcalendarios.jpeg">
+                  <div class="texto"> Calendarios </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="polaroid"><img src="../static/articulos/etiquetas.jpg">
+                  <div class="texto"> Etiquetas </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="polaroid"><img src="../static/articulos/tarjetaspersonales.jpeg">
+                  <div class="texto"> Tarjetas personales </div>
+                </div>
+            </div>
+            
+        </article>
+
+    </main>
 
     <footer>
         <div class="contenedor-footer">
