--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,18 +7,10 @@
     <title> ArtDecoraciones - Contacto </title>
     <meta name="keywords" content="art, decoracion, papeleria, personalizado">
     <meta name="description" content="ArtDecoraciones es una empresa dedicada a la venta de artículos de papelería personalizada, con una amplia gama de productos para todo tipo de eventos, como bodas, fiestas, conciertos, etc.">
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"crossorigin="anonymous"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap"rel="stylesheet"/>
     <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/6db54a042a.js" crossorigin="anonymous"></script>
   </head>
